# craft-application

./:   CONTRIBUTING.md  .editorconfig  .gitignore  .osv-scanner.toml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .yamlignore  .yamllint.yaml  =24.0.0  CONTRIBUTING.md  HACKING.md  HACKING.rst  Makefile  README.md  README.rst  SECURITY.md  agents.md  common.mk  partitioncraft.yaml  platformcraft.yaml  pyproject.toml  spread.yaml  testcraft.yaml  tox.ini
.cursor/rules/: clankers.md
.github/: .copilot-collections.yaml  .jira_sync_config.yaml  AGENTS.md  CLANKERS.md  CODEOWNERS  GEMINI.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json5
.github/instructions/: cloud-agent.instructions.md  core-directive.instructions.md  documentation-rtd.instructions.md  documentation.instructions.md  instructions.instructions.md  python-code-commenting.instructions.md  starcraft-docs-meta.instructions.md  starcraft-docs-style.instructions.md
.github/skills/documentation-build/: SKILL.md
.github/skills/documentation-diataxis/: SKILL.md
.github/skills/documentation-review/: SKILL.md
.github/skills/documentation-structure/: SKILL.md
.github/skills/documentation-style/: SKILL.md
.github/workflows/: copilot-collections-update.yml  craft-test.yaml  docs.yaml  policy.yaml  qa.yaml  release-publish.yaml  spread.yaml  tests.yaml  tics.yaml
craft_application/: __init__.py  _config.py  _const.py  app.py  application.py  errors.py  fetch.py  grammar.py  lifecycle_commands.py  manifest.py  metadata.py  os_release.py  parts.py  project.py  provider.py  pytest_plugin.py  secrets.py  types.py  utils.py
craft_application/cli/: cli.py  lifecycle_commands.py
craft_application/commands/: __init__.py  base.py  init.py  lifecycle.py  lint.py  other.py  prune_instances.py  remote.py  test.py
craft_application/git/: __init__.py  _consts.py  _errors.py  _git_repo.py  _models.py  _utils.py  git_repo.py  models.py
craft_application/launchpad/: __init__.py  errors.py  launchpad.py  util.py
craft_application/launchpad/models/: __init__.py  base.py  build.py  code.py  distro.py  project.py  recipe.py
craft_application/lint/: __init__.py  _types.py  base.py  types.py
craft_application/lint/linters/: __init__.py
craft_application/misc/: instance_bashrc
craft_application/models/: __init__.py  base.py  constraints.py  grammar.py  manifest.py  metadata.py  platforms.py  project.py  spread.py  state.py
craft_application/models/grammar/: __init__.py  _base.py  _parts.py  _project.py  _repo.py
craft_application/parts.old/: __init__.py  errors.py  lifecycle.py
craft_application/remote/: __init__.py  errors.py  git.py  launchpad.py  remote_builder.py  utils.py  worktree.py
craft_application/services/: __init__.py  _secrets.py  base.py  buildplan.py  config.py  fetch.py  init.py  lifecycle.py  linter.py  package.py  project.py  provider.py  proxy.py  remote_build.py  remotebuild.py  request.py  service_factory.py  state.py  testing.py
craft_application/util/: __init__.py  callbacks.py  cli.py  docs.py  environment.py  error_formatting.py  file.py  logging.py  paths.py  platforms.py  pro_services.py  prompt.py  repositories.py  repository.py  retry.py  snap_config.py  str_utils.py  string.py  system.py  time.py  yaml.py
docs/: .custom_wordlist.txt  conf.py  index.rst  redirects.txt
docs/common/: README.md  __init__.py
docs/common/craft-application/: __init__.py
docs/explanation/: build-plans.rst  cryptography.rst  documentation.rst  index.rst  structure-of-a-craft-app.rst  structure.rst
docs/how-to/: add-a-linter.rst  index.rst  pack-a-pro-artifact.rst  partitions.rst  platforms.rst
docs/how-to-guides/: add-a-linter.rst  build-remotely.rst  index.rst  partitions.rst  reuse-packages-between-builds.rst  temp.rst
docs/howto/: index.rst  partitions.rst  platforms.rst
docs/image-sources/: app_structure.drawio
docs/reference/: application.rst  changelog.rst  environment-variables.rst  fetch-service.rst  index.rst  platforms.rst  pytest-plugin.rst  remote-builds.rst
docs/reference/commands/: index.rst
docs/reference/models/: index.rst  platforms.rst  project.rst
docs/reference/services/: app.rst  buildplan.rst  config.rst  index.rst  lifecycle.rst  linter.rst  package.rst  project.rst  remotebuild.rst
docs/release-notes/: index.rst
docs/reuse/: links.txt
partitioncraft/: __init__.py  __main__.py  application.py  cli.py
partitioncraft/services/: __init__.py  package.py  project.py  provider.py
partitioncraft/templates/simple/: partitioncraft.yaml.j2
platformcraft/: __init__.py  __main__.py  application.py  cli.py
platformcraft/models/: __init__.py  platform.py  project.py
platformcraft/services/: __init__.py  package.py  project.py
snap/: snapcraft.yaml
spread/: .extension  cloud-config.yaml
testcraft/: __init__.py  __main__.py  application.py  cli.py
testcraft/commands/: __init__.py  lint.py  state.py
testcraft/models/: __init__.py  metadata.py
testcraft/services/: __init__.py  lifecycle.py  linter.py  package.py
testcraft/templates/multi-base__ubuntu@22.04/: testcraft.yaml.j2
testcraft/templates/simple/: testcraft.yaml.j2
tests/: conftest.py
tests/data/manifest/: craft-manifest-expected.json  session-manifest-expected.yaml  session-report.json
tests/integration/: conftest.py  test_application.py  test_empty.py  test_nothing.py  test_parts.py  test_version.py
tests/spread/: tools.sh
tests/unit/: conftest.py  test_app.py  test_app_plugins.py  test_application.py  test_application_fetch.py  test_errors.py  test_fetch.py  test_grammar.py  test_manifest.py  test_nothing.py  test_os_release.py  test_parts.py  test_process_grammar.py  test_provider.py  test_pytest_plugin.py  test_secrets.py  test_types.py
witchcraft/: __init__.py  __main__.py  application.py  cli.py
witchcraft/commands/: needsrepack.py
witchcraft/models/: __init__.py  metadata.py  project.py
witchcraft/services/: __init__.py  lifecycle.py  package.py  project.py  provider.py
witchcraft/templates/: multi-base
(+209 files in other folders)
