[project]
name = "craft-application"
description = "A framework for *craft applications."
dynamic = ["version", "readme"]
dependencies = [
    "craft-archives>=2.0.0",
    "craft-cli>=2.6.0",
    "craft-grammar>=2.0.0",
    "craft-parts>=2.0.0",
    "craft-providers>=2.0.0",
    "snap-helpers>=0.4.2",
    "platformdirs>=3.10",
    "pydantic~=2.0",
    "license-expression>=30.0.0",
    # "pydantic-yaml<1.0",
    # Pygit2 and libgit2 need to match versions.
    # Further info: https://www.pygit2.org/install.html#version-numbers
    # Minor versions of pygit2 can include breaking changes, so we need to check
    # that they work with craft_application before we update to them. If we bump
    # the minimum minor version here, that absolutely needs to go in the release
    # notes.
    # Pygit2 changelog: https://github.com/libgit2/pygit2/blob/master/CHANGELOG.md
    "pygit2>=1.13.0,<1.15.0",
    "PyYaml>=6.0",
    # see https://github.com/psf/requests/issues/6707
    "requests<2.32",
    "typing_extensions>=4.4.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"

[project.scripts]

[project.optional-dependencies]
remote = [
    # Support for remote-build is optional.
    "launchpadlib>=1.10.16",
]
dev = [
    "coverage[toml]==7.6.1",
    "hypothesis>=6.0",
    "pyfakefs~=5.3",
    "pytest==8.3.2",
    "pytest-check==2.4.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-rerunfailures==14.0",
    "pytest-subprocess~=1.5.2",
    "pytest-time>=0.3.1",
    # Pin requests because of https://github.com/msabramo/requests-unixsocket/issues/73
    "requests<2.32.0",
    "responses~=0.25.0",
    "craft-application[remote]"
]
lint = [
    "black~=24.0",
    "codespell[toml]==2.3.0",
    "yamllint==1.35.1"
]
types = [
    "mypy[reports]==1.11.2",
    "pyright==1.1.376",
    "types-requests",
    "types-urllib3",
]
docs = [
    "canonical-sphinx~=0.1.0",
    "sphinx-autobuild==2024.9.3",
    "sphinx-lint==0.9.1",
]
apt = [
    "python-apt>=2.4.0;sys_platform=='linux'"
]

[build-system]
requires = [
    "setuptools==74.1.1",
    "setuptools_scm[toml]>=8.1"
]
build-backend = "setuptools.build_meta"

[tool]
rye = { dev-dependencies = [
    "pytest-xdist>=3.6.1",
] }

[tool.setuptools.dynamic]
readme = {file = "README.rst"}

[tool.setuptools_scm]
write_to = "craft_application/_version.py"
# the version comes from the latest annotated git tag formatted as 'X.Y.Z'
# standard version scheme:
#   'X.Y.Z.post<commits since tag>+g<hash>'
# scheme when no tags exist:
#   '0.0.post<total commits>+g<hash>
# scheme when no tags exist and working dir is dirty:
#   '0.0.post<total commits>+g<hash>.d<date formatted as %Y%m%d>'
version_scheme = "post-release"
# deviations from the default 'git describe' command:
# - only match annotated tags
# - only match tags formatted as 'X.Y.Z'
# - exclude '+dirty<hash>' suffix
git_describe_command = "git describe --long --match '[0-9]*.[0-9]*.[0-9]*' --exclude '*[^0-9.]*'"

[tool.setuptools.packages.find]
include = ["*craft*"]
namespaces = false

[tool.black]
target-version = ["py38"]

[tool.codespell]
ignore-words-list = "buildd,crate,keyserver,comandos,ro,dedent,dedented"
skip = ".tox,.git,build,.*_cache,__pycache__,*.tar,*.snap,*.png,./node_modules,./docs/_build,.direnv,.venv,venv,.vscode"
quiet-level = 3
check-filenames = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
xfail_strict = true
markers = [
    "enable_features: Tests that require specific features",
]

[tool.coverage.run]
branch = true
parallel = true
omit = ["tests/**"]

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
]

[tool.pyright]
include = ["craft_application/**", "tests/**"]
# pyright might not like the annotations generated by setuptools_scm
exclude = ["craft_application/_version.py"]
strict = ["craft_application"]
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.mypy]
python_version = "3.10"
exclude = [
    "build",
    "tests",
    "results",
    "venv",
    # mypy might not like the annotations generated by setuptools_scm
    "craft_application/_version.py",
]
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
warn_return_any = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["craft_application.*"]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["craft_application", "tests"]
extend-exclude = [
    "docs",
    "__pycache__",
]
# Follow ST063 - Maintaining and updating linting specifications for updating these.
lint.select = [  # Base linting rule selections.
    # See the internal document for discussion:
    # https://docs.google.com/document/d/1i1n8pDmFmWi4wTDpk-JfnWCVUThPJiggyPi2DYwBBu4/edit
    # All sections here are stable in ruff and shouldn't randomly introduce
    # failures with ruff updates.
    "F",  # The rules built into Flake8
    "E", "W",  # pycodestyle errors and warnings
    "I",  # isort checking
    "N",  # PEP8 naming
    "D",  # Implement pydocstyle checking as well.
    "UP",  # Pyupgrade - note that some of are excluded below due to Python versions
    "YTT",  # flake8-2020: Misuse of `sys.version` and `sys.version_info`
    "ANN",  # Type annotations.
    "BLE",  # Do not catch blind exceptions
    "FBT",  # Disallow boolean positional arguments (make them keyword-only)
    "B0",  # Common mistakes and typos.
    "A",  # Shadowing built-ins.
    "C4", # Encourage comprehensions, which tend to be faster than alternatives.
    "T10",  # Don't call the debugger in production code
    "ISC",  # Implicit string concatenation that can cause subtle issues
    "ICN",  # Only use common conventions for import aliases.
    "INP",  # Implicit namespace packages
    "PYI",  # Linting for type stubs.
    "PT",  # Pytest
    "Q",  # Consistent quotations
    "RSE",  # Errors on pytest raises.
    "RET",  # Simpler logic after return, raise, continue or break
    "SIM",  # Code simplification
    "TCH004",  # Remove imports from type-checking guard blocks if used at runtime
    "TCH005",  # Delete empty type-checking blocks
    "ARG",  # Unused arguments
    "PTH",  # Migrate to pathlib
    "ERA",  # Don't check in commented out code
    "PGH",  # Pygrep hooks
    "PL",  # Pylint
    "TRY",  # Cleaner try/except,
]
lint.extend-select = [
    # Pyupgrade: https://github.com/charliermarsh/ruff#pyupgrade-up
    "UP00", "UP01", "UP02", "UP030", "UP032", "UP033",
    # "UP034",  # Very new, not yet enabled in ruff 0.0.227
    # Annotations: https://github.com/charliermarsh/ruff#flake8-annotations-ann
    "ANN0",  # Type annotations for arguments other than `self` and `cls`
    "ANN2",  # Return type annotations
    "B026",  # Keyword arguments must come after starred arguments
    # flake8-bandit: security testing. https://github.com/charliermarsh/ruff#flake8-bandit-s
    # https://bandit.readthedocs.io/en/latest/plugins/index.html#complete-test-plugin-listing
    "S101", "S102",  # assert or exec
    "S103", "S108",  # File permissions and tempfiles - use #noqa to silence when appropriate.
    "S104",  # Network binds
    "S105", "S106", "S107",  # Hardcoded passwords
    "S110",  # try-except-pass (use contextlib.suppress instead)
    "S113",  # Requests calls without timeouts
    "S3",  # Serialising, deserialising, hashing, crypto, etc.
    "S506",  # Unsafe YAML load
    "S508", "S509",  # Insecure SNMP
    "S701",  # jinja2 templates without autoescape
    "RUF001", "RUF002", "RUF003",  # Ambiguous unicode characters
    "RUF005",  # Encourages unpacking rather than concatenation
    "RUF008",  # Do not use mutable default values for dataclass attributes
    "RUF100",  # #noqa directive that doesn't flag anything
]
lint.ignore = [
    "ANN10",  # Type annotations for `self` and `cls`
    #"E203",  # Whitespace before ":"  -- Commented because ruff doesn't currently check E203
    "E501",  # Line too long (reason: black will automatically fix this for us)
    "D105",  # Missing docstring in magic method (reason: magic methods already have definitions)
    "D107",  # Missing docstring in __init__ (reason: documented in class docstring)
    "D203",  # 1 blank line required before class docstring (reason: pep257 default)
    "D213",  # Multi-line docstring summary should start at the second line (reason: pep257 default)
    "D215",  # Section underline is over-indented (reason: pep257 default)
    "A003",  # Class attribute shadowing built-in (reason: Class attributes don't often get bare references)
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
              # (reason: this creates long lines that get wrapped and reduces readability)

    # Ignored due to common usage in current code
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [  # Some things we want for the moin project are unnecessary in tests.
    "D",  # Ignore docstring rules in tests
    "ANN", # Ignore type annotations in tests
    "S101",  # Allow assertions in tests
    "S103", # Allow `os.chmod` setting a permissive mask `0o555` on file or directory
    "S108", # Allow Probable insecure usage of temporary file or directory
    "PLR0913",  # Allow many arguments for test functions
    "PT004", # Allow fixtures that don't return anything to not start with underscores
]
# isort leaves init files alone by default, this makes ruff ignore them too.
"__init__.py" = ["I001"]
# TODO: Revert this
# https://github.com/canonical/craft-application/issues/306
"tests/integration/launchpad/test_anonymous_access.py" = ["ERA001"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.root_validator",
    "pydantic.validator",
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
ignore-decorators = ["typing.overload", "overrides.override", "typing.override"]
